# mimica-ai-assignment

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  1_assignment.md  Dockerfile  Makefile  PHASE_NOTES.md  README.md  architect.md  compose.yaml  plan.md  pyproject.toml
app/: __init__.py  config.py  deps.py  main.py
app/adapters/: __init__.py  relevance_cpu.py  relevance_fake.py  storage_fake.py  storage_http.py  workflow_fake.py  workflow_http.py
app/api/: __init__.py  routes.py  schemas.py
app/core/: __init__.py  errors.py  models.py  orchestrator.py
app/observability/: __init__.py  logging.py  middleware.py  tracing.py
app/ports/: __init__.py  relevance.py  storage.py  workflow.py
docs/: 2_architectecture.md  2_architecture_diagram.excalidraw  3_plan.md  claude_architecture.excalidraw  claude_v2_architecture.excalidraw  codex_architecture.excalidraw  codex_v2_architecture.excalidraw
mock_services/: __init__.py
mock_services/storage_api/: __init__.py  __main__.py  app.py
mock_services/workflow_api/: __init__.py  __main__.py  app.py
scripts/: run_mocks.sh
tests/: conftest.py  test_smoke.py
tests/integration/: test_end_to_end.py  test_live_stack.py
tests/unit/: test_boundary_contracts.py  test_config.py  test_container_files.py  test_deps.py  test_errors.py  test_main.py  test_mock_entrypoints.py  test_models.py  test_obs_logging.py  test_obs_middleware.py  test_obs_tracing.py  test_orchestrator.py  test_orchestrator_spans.py  test_ports.py  test_relevance_cpu.py  test_relevance_fake.py  test_routes.py  test_schemas.py  test_storage_fake.py  test_storage_http.py  test_storage_mock.py  test_workflow_fake.py  test_workflow_http.py  test_workflow_mock.py
