# Project metadata and tool configuration for the Enriched QA Service.
# Targets Python 3.12, managed via `uv`. Runtime deps minimal and explicit;
# dev deps cover linting, typing, testing, coverage, and pre-commit.

[project]
name = "enriched-qa-service"
version = "0.1.0"
description = "Async REST service enriching a QA endpoint with relevant screenshots."
requires-python = ">=3.12,<3.13"
readme = "README.md"
authors = [{ name = "mimicaai-assignment" }]

dependencies = [
    # Web framework + ASGI server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # HTTP client for Workflow and Storage adapters
    "httpx>=0.27",
    # Settings and validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Structured logging
    "structlog>=24.1",
    # Observability
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
]

[dependency-groups]
dev = [
    # Test runner + async support
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio>=4.4",
    # Linters: ruff as the primary, flake8 + plugins as a parallel checker
    "ruff>=0.5",
    "flake8>=7.1",
    "flake8-bugbear>=24.4.26",
    "flake8-comprehensions>=3.15",
    "flake8-simplify>=0.21",
    "flake8-docstrings>=1.7",
    "flake8-annotations>=3.1",
    "flake8-pytest-style>=2.0",
    "flake8-type-checking>=2.9",
    "pep8-naming>=0.14",
    # Static typing
    "mypy>=1.10",
    # Pre-commit framework
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "mock_services"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "integration: tests that spin up mock services and hit the real stack",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["app", "mock_services"]
omit = [
    "*/__main__.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 93
show_missing = true
skip_covered = false
precision = 1
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "docs"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (docstring enforcement)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "PT",   # flake8-pytest-style
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "ANN401", # Allow `typing.Any` where genuinely appropriate
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests: relax docstrings and a few annotation rules. Keep type hints enforced.
"tests/**" = ["D100", "D101", "D102", "D103", "D104", "ANN001", "ANN201"]
# mock_services: light-touch scaffolding, full docstring enforcement not required yet
"mock_services/**" = ["D100", "D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["app", "mock_services"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
